[tool.poetry]
name = "alertest"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.7"
aiohttp = { extras = ["speedups"], version = "3.11.8" }
loguru = "0.7.2"
orjson = "3.10.12"
python-decouple = "3.8"
setuptools = "75.6.0"
pendulum = "3.0.0"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["FA102", "E501"]
lint.fixable = ["I", "COM"]
lint.mccabe.max-complexity = 2
lint.pydocstyle.convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
