[tool.poetry]
name = "bnnc_composter"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
loguru = "0.7.2"
nats-py = "2.9.0"
orjson = "3.10.12"
python-decouple = "3.8"
setuptools = "75.6.0"
websockets = "14.1"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = []
lint.fixable = ["I", "COM"]
lint.mccabe.max-complexity = 2
lint.pydocstyle.convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
